# test_project

./: .env.dist  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_09_11_0035_create_user_model.py  2023_09_11_0417_add_to_user_language.py  2023_09_11_0417_create_user_model.py
bot/: __main__.py  config.py  misc.py
bot/db/: db.py  models.py
bot/handlers/: __init__.py  base.py  new_chat_members.py
bot/middlewares/: __init__.py  database.py  new_user.py
bot/utils/: logging.py
